--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,19 +2,20 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: g++.exe 生成活动文件",
-            "command": "C:\\mingw64\\bin\\g++.exe",
+            "label": "C/C++: gcc.exe 生成活动文件",
+            "command": "C:/msys64/ucrt64/bin/gcc.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
-                //"${file}",                //为默认单文件调试
-                "${fileDirname}\\*.cpp",    //为工作区内打开的所有cpp文件调试
-
+                //"${file}",
+                "*.c",
+                
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"   //生成的可执行文件名字
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                ""
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "C:/msys64/ucrt64/bin"
             },
             "problemMatcher": [
                 "$gcc"
