添加杂物堆hag.txt,将主函数封装

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,7 +95,8 @@
     "sstream": "cpp",
     "stdexcept": "cpp",
     "streambuf": "cpp",
-    "typeinfo": "cpp"
+    "typeinfo": "cpp",
+    "variant": "cpp"
   },
   "cmake.sourceDirectory": "F:/text/text_many"
 }
