--- a/text_many/CMakelists.txt
+++ b/text_many/CMakelists.txt
@@ -11,4 +11,6 @@ add_executable(my_cmake_swap
     ${CMAKE_CURRENT_SOURCE_DIR}/source/main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/source/swap.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/source/max.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/source/logs.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/source/logs.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/source/string.cpp
+)
